fat: If the filesystem extends past the end of the partition, mount read-only.

instead of failing to mount at all. This matches behavior of Linux and
the BSDs.

Fixes #14539.